--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body, html{
   height:100%;
 }
 body{
+  background-image: url("https://cdn.shutterstock.com/shutterstock/videos/1379812/thumb/1.jpg");
+  background-size:     cover;                      /* <------ */
+  background-repeat:   no-repeat;
+  background-position: center center;  
   margin: 0px;
   background-color:#444;
   font-size: 18px;
@@ -9,7 +13,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .lineUpButton{
   padding:5px 12px;
   float:right;
 }
@@ -20,8 +24,19 @@ body, a:link, a:visited, a:active{
 .title{
   background-color: #777;
 }
-.dancer{
-  border:10px solid red;
-  border-radius:10px;
-  position:absolute;
+
+.newClass {
+  -ms-transform: scale(1.6);
+  transform: scale(1.6);
+
 }
+
+img {
+  height: 150px;
+  width: 250px;
+}
+
+.blinky, .batman, .superHero {
+  position: absolute;
+}
+
